--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
-        <title>Code Quiz</title>
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
     </head>
+    <body>
+        <div id="startDiv">
+            <p id="countdownTimer">Time: 60</p>
+            <button id="startBtn" onclick=clock()>Start Quiz!</button>
+        </div>
+    </body>
 </html>
